# nrf24l01-commands

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: commands.rs  fields.rs  lib.rs  registers.rs
