[package]
name = "nrf24l01-commands"
version = "1.0.1"
edition = "2021"
authors = ["Jingwei Ni <ni.jingwei.2210@gmail.com>"]
description = "Register bitfields and commands for the nRF24L01."
keywords = ["nrf24l01"]
categories = ["embedded", "no-std", "hardware-support"]
license = "MIT"
repository = "https://github.com/god-is-a-crab/nrf24l01-commands"
homepage = "https://github.com/god-is-a-crab/nrf24l01-commands"
readme = "README.md"
exclude = [".github"]

[dependencies]
bitfield-struct = "0.9.0"
